--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .App {
   text-align: center;
   width: 100%;
-  background-color: #f8f5f2;
+  background-color: #ffffff;
 }
 * {
   box-sizing: border-box;
