--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -9,3 +9,10 @@
 .plate{
     height: 100vh;
 }
+
+.my-auto {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+}
