--- a/src/Components/Backtracking/style.css
+++ b/src/Components/Backtracking/style.css
@@ -1,3 +1,16 @@
+
+.bttn{
+  border: none;
+  padding: 15px;
+  margin: 5px;
+}
+
+#crd{
+  border: none; 
+  padding: 5px;
+  border-radius: 10%;
+}
+
 .square {
   text-align: center;
   border-radius: 0px;
@@ -8,34 +21,24 @@
 }
 
 .square:focus {
-  border-color: black;
+  border: none;
   box-shadow: none;
   outline: none;
 }
 
 .sudoku-grid {
   display: grid;
-  width: 90%;
-  height: 100%;
+  width: 85%;
+  height: 90vh;
   margin: auto;
   grid-template: repeat(9, 1fr) / repeat(9, 1fr);
 }
 
-.sudoku-grid *:nth-child(9n + 3), *:nth-child(9n + 6) {
-  border-right: 1px solid black;
+.sudoku-grid *:nth-child(9n + 6) , .sudoku-grid *:nth-child(9n + 3) {
+  border-right: 5px solid white;
 }
 
-.sudoku-grid *:nth-child(9n + 4),
-*:nth-child(9n + 7) {
-  border-left: 1px solid black;
-}
 
-.sudoku-grid *:nth-child(n + 19):nth-child(-n + 27),
-*:nth-child(n + 46):nth-child(-n + 54) {
-  border-bottom: 1px solid black;
-}
-
-.sudoku-grid *:nth-child(n + 28):nth-child(-n + 36),
-*:nth-child(n + 55):nth-child(-n + 63) {
-  border-top: 1px solid black;
+.sudoku-grid *:nth-child(n + 19):nth-child(-n + 27), *:nth-child(n + 46):nth-child(-n + 54) {
+  border-bottom: 5px solid white;
 }
