--- a/src/Components/Backtracking/style.css
+++ b/src/Components/Backtracking/style.css
@@ -5,15 +5,20 @@
   margin: 5px;
 }
 
+.bttn:hover{
+  transform: scale(1.1,1.1);
+}
+
 #crd{
-  border: none; 
+  border: 0.5px solid black; 
   padding: 5px;
   border-radius: 10%;
+  margin-left: 20px;
 }
 
 .square {
   text-align: center;
-  border-radius: 0px;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
   padding: 0px;
@@ -35,10 +40,11 @@
 }
 
 .sudoku-grid *:nth-child(9n + 6) , .sudoku-grid *:nth-child(9n + 3) {
-  border-right: 5px solid white;
+  border-right: 8px solid transparent;
 }
 
 
 .sudoku-grid *:nth-child(n + 19):nth-child(-n + 27), *:nth-child(n + 46):nth-child(-n + 54) {
-  border-bottom: 5px solid white;
+  border-bottom: 8px solid transparent;
 }
+
