--- a/src/Components/Pathfinder/Pathfinder.css
+++ b/src/Components/Pathfinder/Pathfinder.css
@@ -21,19 +21,12 @@
   opacity: 0.8;
 }
 
-body {
-  /*fullscree center but no horizontal scrollbar*/
-  background-color: darkslategray;
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  max-width: 100vw;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  overflow-x: hidden;
+.div_button {
+  position: fixed;
+  right: 50%;
+  padding-top: 90px;
 }
-/* copy from here */
+
 .scrolldown {
   --color: white;
   --sizeX: 30px;
@@ -63,25 +56,6 @@ body {
   box-shadow: 0px -5px 3px 1px #ffffff66;
 }
 
-@keyframes scrolldown-anim {
-  0% {
-    opacity: 0;
-    height: 6px;
-  }
-  40% {
-    opacity: 1;
-    height: 10px;
-  }
-  80% {
-    transform: translate(0, 20px);
-    height: 10px;
-    opacity: 0;
-  }
-  100% {
-    height: 3px;
-    opacity: 0;
-  }
-}
 .chevrons {
   padding: 6px 0 0 0;
   margin-left: -3px;
@@ -107,6 +81,8 @@ body {
 .chevrondown:nth-child(even) {
   animation: pulse 500ms ease infinite alternate 250ms;
 }
+
+
 @keyframes pulse {
   from {
     opacity: 0;
@@ -124,5 +100,25 @@ body {
 
   .typejs {
     font-size: 5vmax;
+  }
+}
+
+@keyframes scrolldown-anim {
+  0% {
+    opacity: 0;
+    height: 6px;
+  }
+  40% {
+    opacity: 1;
+    height: 10px;
+  }
+  80% {
+    transform: translate(0, 20px);
+    height: 10px;
+    opacity: 0;
+  }
+  100% {
+    height: 3px;
+    opacity: 0;
   }
 }
