Landing page pathfinder complete

--- a/src/Components/Pathfinder/Pathfinder.css
+++ b/src/Components/Pathfinder/Pathfinder.css
@@ -130,7 +130,7 @@
 /* button */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
-a{
+.path_link {
   position: relative;
   display: inline-block;
   padding: 25px 30px;
@@ -145,7 +145,7 @@ a{
   margin-top: 40vh;
 }
 
-a:hover{
+.path_link:hover{
   background: #03e9f4;
   color: #050801;
   box-shadow: 0 0 5px #03e9f4,
@@ -154,17 +154,17 @@ a:hover{
               0 0 200px #03e9f4;
    -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
 }
-a:nth-child(1){
+.path_link:nth-child(1){
   filter: hue-rotate(270deg);
 }
-a:nth-child(2){
+.path_link:nth-child(2){
   filter: hue-rotate(110deg);
 }
-a span{
+.path_link span{
   position: absolute;
   display: block;
 }
-a span:nth-child(1){
+.path_link span:nth-child(1){
   top: 0;
   left: 0;
   width: 100%;
@@ -180,7 +180,7 @@ a span:nth-child(1){
       left: 100%;
   }
 }
-a span:nth-child(2){
+.path_link span:nth-child(2){
   top: -100%;
   right: 0;
   width: 2px;
@@ -197,7 +197,7 @@ a span:nth-child(2){
       top: 100%;
   }
 }
-a span:nth-child(3){
+.path_link span:nth-child(3){
   bottom: 0;
   right: 0;
   width: 100%;
@@ -216,7 +216,7 @@ a span:nth-child(3){
 }
 
 
-a span:nth-child(4){
+.path_link span:nth-child(4){
   bottom: -100%;
   left: 0;
   width: 2px;
