--- a/src/Components/Sudoku/sudokuComponents/Information/information.css
+++ b/src/Components/Sudoku/sudokuComponents/Information/information.css
@@ -1,5 +1,5 @@
 .sudokuInformation {
-    background:#faeee7 ;
+    /* background:#faeee7 ; */
     height: 100vh;
     overflow: hidden;
 }
@@ -27,7 +27,7 @@
     left: 0px;
     height: 80vh;
     z-index: 2;
-    background:#ff6e6c;
+    background:#f25f4c;
     border-radius: 30px;
     padding: 40px;
     box-shadow: 0 0 40px #000;
@@ -37,7 +37,7 @@
     cursor: pointer;
     user-select: none;
     text-align: left;
-    color:#67568c;
+    color:#fffffe;
     font-weight: bold;
 }
 /* .card:last-child
@@ -56,7 +56,7 @@
     animation: card-out 0.6s cubic-bezier(.8,.2,.1,0.8);
     transform: translateY(-50px) rotate(8deg) translateX(55px) scale(0.95);
     z-index: 1;
-    background:#172c66;
+    background:#e53170;
 }
   
 @keyframes card-out 
@@ -74,7 +74,7 @@
     position: relative;
     z-index: 10;
     opacity: 1;
-    background: #ffc6c7;
+    background: #ff8906;
     transform: rotate(-1deg) translateX(0%) scale(1);
 }
 
