--- a/src/Components/Sudoku/sudokuComponents/StopWatch/stopwatch.css
+++ b/src/Components/Sudoku/sudokuComponents/StopWatch/stopwatch.css
@@ -7,17 +7,18 @@
 	color: #0b0722;
 	display: flex;
 	flex-direction: column;
-	height: 12rem;
+	height: 14rem;
 	justify-content: center;
 	padding: 1rem;
 	position: relative;
 	transition: border 200ms, background-color 200ms;
-	width: 12rem;
-    margin: auto;
+	width: 14rem;
+    margin: 3vh auto;
 }
 
 #sudoku-timestamp {
 	margin: 1.5rem 0 1rem;
+	font-size: 30px;
 }
 #sudoku-actionRow {
 	display: flex;
