--- a/src/Components/Landing/TopAlgo/TopAlgo.css
+++ b/src/Components/Landing/TopAlgo/TopAlgo.css
@@ -7,12 +7,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100vmax;
   z-index: 2;
   height: 100vh;
   background: url("../images/Header.png");
   background-size: cover;
   background-position: fixed;
+  background-position-x: center;
+
 }
 
 #top_header img {
