--- a/src/Components/Huffman/Huffman.css
+++ b/src/Components/Huffman/Huffman.css
@@ -33,7 +33,7 @@
 }
 
 .huffman-hero-text-container {
-  background-color: #fff;
+  background-color: #fef9ef;
   border-radius: 5px;
   text-align: left;
   /* height: 60vh; */
@@ -74,3 +74,33 @@
   padding-left: 20px !important;
   padding-right: 20px !important;
 } */
+
+.huffman-upload-pic-container {
+  background-color: #a6db8d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.huffman-upload-text {
+  padding: 1.5rem;
+  background-color: #98c697;
+  border-radius: 5px;
+  width: 30rem;
+  font-weight: bold;
+  font-size: 1.25rem;
+  border: 1px solid white;
+}
+
+.huffman-show-image {
+  display: flex;
+  height: 100vh;
+}
+
+.huffman-image-sample {
+  background-color: lightgoldenrodyellow;
+  /* height: 50%;
+  width: 50%; */
+  border-radius: 10px;
+}
