--- a/src/Components/Developers/Developers.css
+++ b/src/Components/Developers/Developers.css
@@ -16,8 +16,6 @@ body {
 }
 
 h1,
-h2,
-h3,
 h4,
 h5,
 h6 {
@@ -25,11 +23,25 @@ h6 {
   text-transform: none;
   color: rgba(254, 82, 76, 1);
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 1px;
   line-height: 1.5;
 }
-
+h2{
+  font-size: 3rem !important;
+  color: rgba(254, 82, 76, 1);
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 600 !important;
+}
+h3{
+  font-size: 2rem !important;
+  font-weight: 500 !important;
+}
+.heading-text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 a:link,
 a:active,
 a:visited{
