--- a/src/Components/Algorithms/AlgoMenu.css
+++ b/src/Components/Algorithms/AlgoMenu.css
@@ -45,6 +45,7 @@ h4 {
 	font-size: 30px;
 	font-family: 'Rock Salt', cursive;
 	-webkit-animation:colorchange 5s infinite alternate;
+  animation:colorchange 5s infinite alternate;
 }
 .zayn_1 {
   position: relative;
@@ -247,19 +248,92 @@ h4 {
 	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
 	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
 }
+@keyframes spaceboots {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
 .shadow:hover,
 .shadow:focus {
 	-webkit-animation-name: spaceboots;
+  animation-name: spaceboots;
 	-webkit-animation-duration: 0.8s;
+  animation-duration: 0.8s;
 	-webkit-transform-origin:50% 50%;
+  transform-origin:50% 50%;
 	-webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 	-webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 
 
 
  @-webkit-keyframes colorchange {
+      0% {
+        
+        color: darkviolet;
+      }
+      
+      10% {
+        
+        color: #fa3380;
+      }
+      
+      20% {
+        
+        color: #02b3e4;
+      }
+      
+      30% {
+        
+        color: #02ccba;
+      }
+      
+      40% {
+        
+        color: #a951ed;
+      }
+      
+      50% {
+        
+        color: #ffa234;
+      }
+      
+      60% {
+        
+        color: #ff5483;
+      }
+      
+      70% {
+        
+        color: deepskyblue;
+      }
+      80% {
+     
+        color: purple;
+      }
+      
+      90% {
+     
+        color: lightpink;
+      }
+      
+      100% {
+        
+        color: #fff;
+      }
+    }
+    @keyframes colorchange {
       0% {
         
         color: darkviolet;
@@ -338,6 +412,14 @@ h4 {
 		to {
 				-webkit-transform: rotate(359deg);
 		}
+}
+@keyframes rotation {
+  from {
+      -webkit-transform: rotate(0deg);
+  }
+  to {
+      -webkit-transform: rotate(359deg);
+  }
 }
 
 
